<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/dark_blue">

            <TextView
                android:id="@+id/message_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:textColor="@color/white"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/light_blue">

            <TextView
                android:id="@+id/battery_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:textColor="@color/white"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/light_blue">

            <TextView
                android:id="@+id/search_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:textColor="@color/white"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/other"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/dark_blue">

            <TextView
                android:id="@+id/study_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:textColor="@color/white"/>

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>