<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/english"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/dark_blue">

            <TextView
                android:id="@+id/english_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:textColor="@color/white"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/hindi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/light_blue">

            <TextView
                android:id="@+id/hindi_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hindi"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:textColor="@color/white"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/env"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/nevi_light_blue">

            <TextView
                android:id="@+id/env_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/env"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:textColor="@color/white"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>