<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/stop_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/search_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:fontFamily="monospace"
                android:textStyle="bold"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/search_text_title">

                <TextView
                    android:id="@+id/search_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:fontFamily="monospace"
                    android:minLines="250"/>


            </ScrollView>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/mic_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/light_blue">

                <ImageView
                    android:id="@+id/mic_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_baseline_mic_24"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/text_mic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mic_image"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/mic"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:fontFamily="monospace"
                    android:textStyle="bold"/>

            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:outlineAmbientShadowColor="@color/dark_blue"
        android:outlineSpotShadowColor="@color/dark_blue"
        android:visibility="gone"/>


</RelativeLayout>